src/test/ui/internal/internal-unstable.stderr
error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:34:25
   |
LL |     pass_through_allow!(internal_unstable::unstable());
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:36:27
   |
LL |     pass_through_noallow!(internal_unstable::unstable());
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:40:22
   |
LL |     println!("{:?}", internal_unstable::unstable());
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:42:10
   |
LL |     bar!(internal_unstable::unstable());
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(function)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'function'
  --> $DIR/internal-unstable.rs:12:9
   |
LL |         internal_unstable::unstable();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bar!(internal_unstable::unstable());
   |     ------------------------------------ in this macro invocation
   |
   = help: add `#![feature(function)]` to the crate attributes to enable
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
